[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interface/Dialog/PortraitTest.png" type="Texture" id=1]
[ext_resource path="res://Interface/Dialog/DialogContainer.gd" type="Script" id=2]
[ext_resource path="res://Interface/Dialog/TextBox.png" type="Texture" id=3]
[ext_resource path="res://Characters/Saoirse/Sprites/Saoirse_Portrait.png" type="Texture" id=4]
[ext_resource path="res://Interface/Dialog/PortraitName.png" type="Texture" id=5]
[ext_resource path="res://Interface/Theme.tres" type="Theme" id=6]
[ext_resource path="res://Interface/Dialog/NextIndicator.png" type="Texture" id=7]

[node name="DialogContainer" type="Control" groups=[
"interface",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 480, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RevealTween" type="Tween" parent="."]
pause_mode = 2

[node name="DialogPanel" type="NinePatchRect" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -120.0
margin_right = 200.0
rect_min_size = Vector2( 400, 120 )
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextIndicator" type="TextureRect" parent="DialogPanel"]
margin_left = 370.0
margin_top = 80.0
margin_right = 257.0
margin_bottom = 65.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPortraitContainer" type="VBoxContainer" parent="DialogPanel"]
margin_left = 15.0
margin_top = -15.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPortrait" type="NinePatchRect" parent="DialogPanel/CharacterPortraitContainer"]
margin_right = 70.0
margin_bottom = 90.0
rect_min_size = Vector2( 70, 90 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
patch_margin_left = 12
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="DialogPanel/CharacterPortraitContainer/CharacterPortrait"]
margin_left = 5.0
margin_top = 5.0
margin_right = 60.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DialogPanel/CharacterPortraitContainer/CharacterPortrait/CenterContainer"]
margin_right = 60.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="NameContainer" type="NinePatchRect" parent="DialogPanel/CharacterPortraitContainer"]
margin_top = 94.0
margin_right = 90.0
margin_bottom = 112.0
rect_min_size = Vector2( 90, 18 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 5 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="RichTextLabel" type="RichTextLabel" parent="DialogPanel/CharacterPortraitContainer/NameContainer"]
margin_left = 5.0
margin_top = 2.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 95, 38 )
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="CenterContainer" parent="DialogPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 110.0
margin_top = -45.0
margin_right = 390.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogPanel/TextContainer"]
margin_top = 2.0
margin_right = 280.0
margin_bottom = 82.0
rect_min_size = Vector2( 280, 80 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 6 )
bbcode_enabled = true
tab_size = 2
__meta__ = {
"_edit_use_anchors_": false
}
